--- a/pdgreader/src/main/res/layout/item_book_page.xml
+++ b/pdgreader/src/main/res/layout/item_book_page.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
+    <com.chaoxing.view.PinchImageView
         android:id="@+id/ivPage"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
