--- a/pdgreader/src/main/res/layout/item_book_page.xml
+++ b/pdgreader/src/main/res/layout/item_book_page.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.chaoxing.view.PinchImageView
+    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
         android:id="@+id/ivPage"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
