--- a/pdgreader/src/main/res/layout/activity_pdgreader.xml
+++ b/pdgreader/src/main/res/layout/activity_pdgreader.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clickable="true">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvBookView"
@@ -11,23 +12,113 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/getAllNotEmptyData"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="获取缓存" />
+    <RelativeLayout
+        android:id="@+id/rlTitleBar"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@drawable/reader_toolbar_top_bg"
+        android:clickable="true"
+        android:paddingTop="10dp"
+        android:paddingRight="4dp">
 
-    <Button
-        android:id="@+id/getCurrentPageInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:text="当前页" />
+        <ImageView
+            android:id="@+id/ivLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:padding="6dp"
+            android:src="@drawable/read_back" />
 
-    <Button
-        android:id="@+id/tvCurrentLoadingPage"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="书名"
+            android:textColor="#6f6e6a"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/ivRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="6dp"
+            android:src="@drawable/bookmark_add" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/llBottomBar"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/reader_toolbar_bottom_bg"
+        android:clickable="true"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
+
+        <ImageView
+            android:id="@+id/ivMenu"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/go_category" />
+
+        <ImageView
+            android:id="@+id/ivNote"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/note_open" />
+
+        <ImageView
+            android:id="@+id/ivLigth"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/read_display" />
+
+        <ImageView
+            android:id="@+id/ivGoPage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/read_goto_page" />
+
+        <ImageView
+            android:id="@+id/ivChangeOV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/pdf_orientation_vertical" />
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="当前加载" />
+        android:layout_below="@+id/rlTitleBar">
+
+        <Button
+            android:id="@+id/getAllNotEmptyData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="获取缓存" />
+
+        <Button
+            android:id="@+id/getCurrentPageInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="当前页" />
+
+        <Button
+            android:id="@+id/tvCurrentLoadingPage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="当前加载" />
+    </RelativeLayout>
 </RelativeLayout>
