--- a/pdgreader/src/main/res/layout/item_book_page.xml
+++ b/pdgreader/src/main/res/layout/item_book_page.xml
@@ -3,6 +3,7 @@
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     android:orientation="vertical">
 
     <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
